--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lenis": "^1.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-typed": "^2.0.12",
