--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "lenis": "^1.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-typed": "^2.0.12",
     "swiper": "^11.1.9"
   },
